// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch blocked users if moderates channel 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": Array [
        Object {
          "description": "I am blocked in the Spectrum community",
          "firstName": null,
          "id": "4",
          "isOnline": null,
          "name": "Blocked user",
          "timezone": null,
          "username": "blocked-user",
          "website": "",
        },
      ],
      "id": "1",
    },
  },
}
`;

exports[`should fetch blocked users if moderates community 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": Array [
        Object {
          "description": "I am blocked in the Spectrum community",
          "firstName": null,
          "id": "4",
          "isOnline": null,
          "name": "Blocked user",
          "timezone": null,
          "username": "blocked-user",
          "website": "",
        },
      ],
      "id": "1",
    },
  },
}
`;

exports[`should fetch blocked users if owns community 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": Array [
        Object {
          "description": "I am blocked in the Spectrum community",
          "firstName": null,
          "id": "4",
          "isOnline": null,
          "name": "Blocked user",
          "timezone": null,
          "username": "blocked-user",
          "website": "",
        },
      ],
      "id": "1",
    },
  },
}
`;

exports[`should not fetch blocked users if no permissions 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: You don’t have permission to manage this channel],
  ],
}
`;

exports[`should not fetch blocked users if not authed 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "1",
    },
  },
  "errors": Array [
    [GraphQLError: You must be signed in to do this],
  ],
}
`;
